# delphi-training-orchestration-service

./: .gitignore  CMakeLists.txt  Makefile  README.md  create_loaders.cpp  create_loaders.h  dpp-main.cpp  main.cpp  model_checkpoint.cpp  model_checkpoint.h  setup.cpp  setup.h  summerMain.cpp  test.cpp  train.cpp  train.h
.github/workflows/: ci.yml  ubuntu.yml
examples/: ddp_create_loaders.txt  ddp_main.txt  ddp_model_checkpoint.txt  ddp_setup.txt  ddp_train.txt
